# services/productweight_service.go
@@ -27,6 +27,7 @@ type AddProductWeightRequest struct {
 	Weight            int     `json:"weight" form:"weight"`
 	Price             float64 `json:"price" form:"price"`
 	StockAvailability int     `json:"stock" form:"stock"`
+	Measurement       string  `json:"measurement" form:"measurement"`
 }
 
 // UpdateProductWeightRequest represents the request body for updating an existing weight variant
@@ -34,6 +35,14 @@ type UpdateProductWeightRequest struct {
 	Weight            int     `json:"weight" form:"weight"`
 	Price             float64 `json:"price" form:"price"`
 	StockAvailability int     `json:"stock" form:"stock"`
+	Measurement       string  `json:"measurement" form:"measurement"`
+}
+
+// DefineRoutes sets up the routes for the ProductWeightService
+func (ps *ProductWeightService) RegisterRoutes(router *mux.Router) {
+	router.HandleFunc("/productweight/{productID}/weights", ps.AddProductWeight).Methods("POST")
+	router.HandleFunc("/productweight/{productID}/weights/{weightID}", ps.UpdateProductWeight).Methods("PUT")
+	router.HandleFunc("/productweight/weights/{weightID}", ps.FetchProductWeight).Methods("GET") // New Route
 }
 
 // AddProductWeight adds a new weight variant for a product
@@ -74,6 +83,7 @@ func (ps *ProductWeightService) AddProductWeight(w http.ResponseWriter, r *http.
 		Weight:            weight.Weight,
 		Price:             weight.Price,
 		StockAvailability: weight.StockAvailability,
+		Measurement:       weight.Measurement,
 		CreatedAt:         time.Now(),
 		UpdatedAt:         time.Now(),
 	}
@@ -115,6 +125,7 @@ func (ps *ProductWeightService) UpdateProductWeight(w http.ResponseWriter, r *ht
 	vars := mux.Vars(r)
 	productID := vars["productID"]
 	weightID := vars["weightID"]
+	measurement := vars["measurement"]
 
 	// Parse the request body
 	var weight UpdateProductWeightRequest
@@ -126,7 +137,7 @@ func (ps *ProductWeightService) UpdateProductWeight(w http.ResponseWriter, r *ht
 	}
 
 	// Update the product weight in the database
-	err = ps.updateProductWeight(productID, weightID, weight)
+	err = ps.updateProductWeight(productID, weightID, weight, measurement)
 	if err != nil {
 		log.Println(err)
 		http.Error(w, "Failed to update weight", http.StatusInternalServerError)
@@ -136,6 +147,56 @@ func (ps *ProductWeightService) UpdateProductWeight(w http.ResponseWriter, r *ht
 	// Send the response
 	w.WriteHeader(http.StatusOK)
 	w.Write([]byte("Weight updated successfully"))
+}
+
+// FetchProductWeight fetches product weight details based on product_weight_id
+// @Summary Fetch product weight details based on product_weight_id
+// @Tags Product Weights
+// @Param weightID path string true "Weight ID"
+// @Produce json
+// @Success 200 {object} models.ProductWeight "Successfully fetched weight details"
+// @Failure 400 "Invalid weight ID"
+// @Failure 500 "Failed to fetch weight details"
+// @Router /productweight/weights/{weightID} [get]
+func (ps *ProductWeightService) FetchProductWeight(w http.ResponseWriter, r *http.Request) {
+	vars := mux.Vars(r)
+	weightIDStr := vars["weightID"]
+
+	// Convert weightID from string to int
+	weightID, err := strconv.Atoi(weightIDStr)
+	if err != nil {
+		log.Println(err)
+		http.Error(w, "Invalid weight ID", http.StatusBadRequest)
+		return
+	}
+
+	productWeight, err := ps.getProductWeight(weightID)
+	if err != nil {
+		log.Println(err)
+		http.Error(w, "Failed to fetch weight details", http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(productWeight)
+	if err != nil {
+		log.Println(err)
+		http.Error(w, "Failed to encode response", http.StatusInternalServerError)
+		return
+	}
+}
+
+// getProductWeight fetches a weight variant details from the database based on weightID
+func (ps *ProductWeightService) getProductWeight(weightID int) (*models.ProductWeight, error) {
+	query := `SELECT * FROM product_weights WHERE id = ?`
+	row := ps.DB.QueryRow(query, weightID)
+
+	var weight models.ProductWeight
+	err := row.Scan(&weight.ID, &weight.ProductID, &weight.Weight, &weight.Price, &weight.StockAvailability, &weight.CreatedAt, &weight.UpdatedAt)
+	if err != nil {
+		return nil, err
+	}
+	return &weight, nil
 }
 
 // saveProductWeight saves a weight variant for a product to the database
@@ -149,17 +210,11 @@ func (ps *ProductWeightService) saveProductWeight(weight *models.ProductWeight) 
 }
 
 // updateProductWeight updates an existing weight variant for a product in the database
-func (ps *ProductWeightService) updateProductWeight(productID string, weightID string, weight UpdateProductWeightRequest) error {
-	query := `UPDATE product_weights SET weight = ?, price = ?, stock = ?, updated_at = ? WHERE product_id = ? AND id = ?`
-	_, err := ps.DB.Exec(query, weight.Weight, weight.Price, weight.StockAvailability, time.Now(), productID, weightID)
+func (ps *ProductWeightService) updateProductWeight(productID string, weightID string, weight UpdateProductWeightRequest, measurement string) error {
+	query := `UPDATE product_weights SET weight = ?, price = ?, stock = ?, updated_at = ?, measurement = ? WHERE product_id = ? AND id = ?`
+	_, err := ps.DB.Exec(query, weight.Weight, weight.Price, weight.StockAvailability, time.Now(), weight.Measurement, productID, weightID)
 	if err != nil {
 		return err
 	}
 	return nil
-}
-
-// DefineRoutes sets up the routes for the ProductWeightService
-func (ps *ProductWeightService) RegisterRoutes(router *mux.Router) {
-	router.HandleFunc("/productweight/{productID}/weights", ps.AddProductWeight).Methods("POST")
-	router.HandleFunc("/productweight/{productID}/weights/{weightID}", ps.UpdateProductWeight).Methods("PUT")
 }
